[package]
name = "cw-multi-test"
version = "2.1.0"
authors = [
    "Ethan Frey <ethanfrey@users.noreply.github.com>",
    "Dariusz Depta <DariuszDepta@users.noreply.github.com>"
]
description = "Testing tools for multi-contract interactions"
repository = "https://github.com/CosmWasm/cw-multi-test"
homepage = "https://cosmwasm.com"
license = "Apache-2.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
backtrace = ["anyhow/backtrace"]
staking = ["cosmwasm-std/staking"]
stargate = ["cosmwasm-std/stargate"]
cosmwasm_1_1 = ["cosmwasm-std/cosmwasm_1_1"]
cosmwasm_1_2 = ["cosmwasm_1_1", "cosmwasm-std/cosmwasm_1_2"]
cosmwasm_1_3 = ["cosmwasm_1_2", "cosmwasm-std/cosmwasm_1_3"]
cosmwasm_1_4 = ["cosmwasm_1_3", "cosmwasm-std/cosmwasm_1_4"]
cosmwasm_2_0 = ["cosmwasm_1_4", "cosmwasm-std/cosmwasm_2_0"]

[dependencies]
anyhow = "1.0.86"
bech32 = "0.11.0"
cosmwasm-std = "2.1.3"
cw-storage-plus = "2.0.0"
cw-utils = "2.0.0"
derivative = "2.2.0"
itertools = "0.13.0"
prost = "0.13.1"
schemars = "0.8.21"
serde = "1.0.208"
sha2 = "0.10.8"
thiserror = "1.0.63"

[dev-dependencies]
hex = "0.4.3"
hex-literal = "0.4.1"
once_cell = "1.19.0"
