[package]
name = "cw-multi-test"
version = "2.3.2"
authors = [
    "Ethan Frey <ethanfrey@users.noreply.github.com>",
    "Dariusz Depta <depta@engos.de>"
]
description = "Testing tools for multi-contract interactions"
repository = "https://github.com/CosmWasm/cw-multi-test"
homepage = "https://cosmwasm.com"
license = "Apache-2.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
backtrace = ["anyhow/backtrace"]
staking = ["cosmwasm-std/staking"]
stargate = ["cosmwasm-std/stargate"]
cosmwasm_1_1 = ["cosmwasm-std/cosmwasm_1_1"]
cosmwasm_1_2 = ["cosmwasm_1_1", "cosmwasm-std/cosmwasm_1_2"]
cosmwasm_1_3 = ["cosmwasm_1_2", "cosmwasm-std/cosmwasm_1_3"]
cosmwasm_1_4 = ["cosmwasm_1_3", "cosmwasm-std/cosmwasm_1_4"]
cosmwasm_2_0 = ["cosmwasm_1_4", "cosmwasm-std/cosmwasm_2_0"]
cosmwasm_2_1 = ["cosmwasm_2_0", "cosmwasm-std/cosmwasm_2_1"]
cosmwasm_2_2 = ["cosmwasm_2_1", "cosmwasm-std/cosmwasm_2_2"]

[dependencies]
anyhow = "1.0.97"
bech32 = "0.11.0"
cosmwasm-schema = "2.2.2"
cosmwasm-std = "2.2.2"
cw-storage-plus = "2.0.0"
cw-utils = "2.0.0"
itertools = "0.14.0"
prost = "0.13.5"
schemars = "0.8.22"
serde = "1.0.219"
sha2 = "0.10.8"
thiserror = "2.0.12"

[dev-dependencies]
base64 = "0.22.1"
hex = "0.4.3"
hex-literal = "=0.4.1"
serde_json = "1.0.140"
